--- a/index.html
+++ b/index.html
@@ -14,40 +14,41 @@
 </head>
 <body>
     <header>
-        <a href="images/logo_færdig.png" class="logo"></a>
+    <div class="navcontainer">
+        <img src="images/logo_færdig.png" alt="logo" class="logo">
+
         <input type="checkbox" id="menu-bar">
         <label for="menu-bar"><i class="fa-solid fa-bars"></i></label>
 
         <nav class="navbar">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Pages +</a>
+                <li><a href="#">Kontaktinformationer</a></li>
+                <li><a href="#">Anmeldelser</a>
+                <ul>
+                    <li><a href="#">Historier og oplevelser fra kunstere</a></li>
+                </li>
+                </ul>
+                <li><a href="#">Om Radar</a>
                     <ul>
-                        <li><a href="#">Blogs</a></li>
-                        <li><a href="#">Services +</a>
-                            <ul>
-                                <!-- DET HER ER EN HTML -->
-                                <li><a href="#">HTML</a></li>
-                                <li><a href="#">CSS</a></li>
-                                <li><a href="#">JS</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="#">Åbningstider</a></li>
+                        <li><a href="#">Frivilligt arbejde</a></li>
+                        <li><a href="#">Radars historie</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Review</a></li>
-                <li><a href="#">Gallery +</a>
+                <li><a href="#">Arrangementer</a>
                     <ul>
-                        <li><a href="#">Grid gallery</a></li>
-                        <li><a href="#">Flex gallery</a></li>
+                        <li><a href="#">Baren</a></li>
+                        <li><a href="#">Priser</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Contact</a></li>
             </ul>
-
         </nav>
+    </div>
 
     </header>
+<main>
+
+</main>
 
 </body>
 </html>
