--- a/index.html
+++ b/index.html
@@ -50,5 +50,14 @@
 
 </main>
 
+<footer>
+    <div class="some">
+        <i class="fa-brands fa-spotify"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-youtube"></i>
+    </div>
+</footer>
+
 </body>
 </html>
