--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forside | Radar</title>
+    <link rel="icon" type="image/x-icon" href="/images/logo_færdig.png">
 
     <!--Stylesheet-->
     <link rel="stylesheet" href="css/style.css">
