--- a/kontaktinformation.html
+++ b/kontaktinformation.html
@@ -46,12 +46,19 @@
 </header>
 
 <main>
-<h1>Kontaktinformation</h1>
-<h2>BOOKING: booking.(@).radarlive.dk <br>
-    GENEREL BOOKING: kontakt.(@).radarlive.dk <br>
-    TELEFON: +45 86 76 03 44 <br>
-    ADRESSE: Karen Wegners Gade 6 <br>
-</h2>
+    <h1>Kontaktinformation</h1>
+    <div class="box">
+        <div>
+            <h2>BOOKING: booking.(@).radarlive.dk <br>
+            GENEREL BOOKING: kontakt.(@).radarlive.dk <br>
+            TELEFON: +45 86 76 03 44 <br>
+            ADRESSE: Karen Wegners Gade 6 <br>
+            </h2>
+        </div>
+        <div>
+        <img src="images/kort_billede.png" alt="kort" class="kort_billede">
+        </div>
+    </div>
 </main>
 
 <footer>
