--- a/kontaktinformation.html
+++ b/kontaktinformation.html
@@ -47,6 +47,7 @@
 
 <main>
     <h1>Kontaktinformation</h1>
+    
     <div class="box">
         <div>
             <h2>BOOKING: booking.(@).radarlive.dk <br>
@@ -55,10 +56,12 @@
             ADRESSE: Karen Wegners Gade 6 <br>
             </h2>
         </div>
-        <div>
-        <img src="images/kort_billede.png" alt="kort" class="kort_billede">
+        <div class="billeder">
+            <img src="images/kort.png" alt="kort" class="kort">
+            <img src="images/tekst.png" alt="tekst" class="tekst">
         </div>
     </div>
+
 </main>
 
 <footer>
