--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <body>
     <header>
     <div class="navcontainer">
-        <img src="images/logo_færdig.png" alt="logo" class="logo">
+        <a href="index.html"><img src="images/logo_færdig.png" alt="logo" class="logo"></a>
 
         <input type="checkbox" id="menu-bar">
         <label for="menu-bar"><i class="fa-solid fa-bars"></i></label>
 
         <nav class="navbar">
             <ul>
-                <li><a href="#">Kontaktinformationer</a></li>
+                <li><a href="kontaktinformation.html">Kontaktinformationer</a></li>
                 <li><a href="#">Anmeldelser</a>
                 <ul>
                     <li><a href="#">Historier og oplevelser fra kunstere</a></li>
