--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <li><a href="#">Radars historie</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Arrangementer</a>
+                <li><a href="arrangementer.html">Arrangementer</a>
                     <ul>
                         <li><a href="#">Baren</a></li>
                         <li><a href="#">Priser</a></li>
