--- a/kontaktinformation.html
+++ b/kontaktinformation.html
@@ -9,6 +9,9 @@
     <!--Stylesheet-->
 <link rel="stylesheet" href="css/kontaktinformationer.css">
 
+<!--Font Awesome-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
 </head>
 <body>
 <header>
@@ -33,7 +36,7 @@
                 <li><a href="#">Radars historie</a></li>
             </ul>
                 </li>
-                <li><a href="#">Arrangementer</a>
+                <li><a href="arrangementer.html">Arrangementer</a>
             <ul>
                 <li><a href="#">Baren</a></li>
                 <li><a href="#">Priser</a></li>
