--- a/arrangementer.html
+++ b/arrangementer.html
@@ -46,8 +46,21 @@
         </div>
     </header>
 
+<!--ChatGPT: "Kan jeg opdele min side i billeder ved brug af html og css?" https://chatgpt.com/share/67580d23-3af4-8009-bc27-cd1e41a37cb8-->
     <main>
-
+        <div class="section section1">Sektion 1</div>
+        <div class="section section2">Sektion 2</div>
+        <div class="section section3">Sektion 3</div>
     </main>
+
+    <footer>
+        <div class="some">
+            <i class="fa-brands fa-spotify"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-youtube"></i>
+        </div>
+    </footer>
+
 </body>
 </html>
