--- a/arrangementer.html
+++ b/arrangementer.html
@@ -48,9 +48,21 @@
 
 <!--ChatGPT: "Kan jeg opdele min side i billeder ved brug af html og css?" https://chatgpt.com/share/67580d23-3af4-8009-bc27-cd1e41a37cb8-->
     <main>
-        <div class="section section1">Sektion 1</div>
-        <div class="section section2">Sektion 2</div>
-        <div class="section section3">Sektion 3</div>
+    <div class="koncert">
+        <img src="images/andreasodbjerg.png" alt="andreas odbjerg" class="andreasodbjerg_billede">
+       <div class="tekst1">
+        <h1>
+            ANDREAD ODBJERG
+        </h1>
+        <p>Andreas Odbjerg er en dansk sanger, sangskriver og musikproducer, kendt for sin popmusik med personlige tekster <br>og fængende melodier.
+            Han har haft stor succes med hits som "I morgen er der også en dag" og "Stor mand". <br>
+            Odbjerg, der oprindeligt kommer fra Odense,har haft en stærk tilknytning til den danske musikscene <br>
+            og har optrådt på flere prominente spillesteder. <br>
+            I Aarhus har Andreas Odbjerg blandt andet spillet på Radar, et ikonisk og intimt spillested kendt <br>
+            for at fremme både etablerede og upcoming kunstnere. Her har han med sine energifyldte liveoptrædener skabt en <br>
+            tæt forbindelse til publikum og cementeret sin status som en af Danmarks mest talentfulde musikere.</p>
+        </div>
+    </div>
     </main>
 
     <footer>
