--- a/arrangementer.html
+++ b/arrangementer.html
@@ -48,21 +48,61 @@
 
 <!--ChatGPT: "Kan jeg opdele min side i billeder ved brug af html og css?" https://chatgpt.com/share/67580d23-3af4-8009-bc27-cd1e41a37cb8-->
     <main>
-    <div class="koncert">
-        <img src="images/andreasodbjerg.png" alt="andreas odbjerg" class="andreasodbjerg_billede">
+    <div class="koncert1">
+        <img src="images/fakenameband.png" alt="fakenameband" class="fakenameband_billede">
        <div class="tekst1">
+        <!--ChatGPT: "opdigt er fake band, og giv bandet et godt navn. skriv en kort beskrivende tekst om bandet og deres oprindelse" https://chatgpt.com/share/67581da0-bcac-8009-9f3c-f43610a9b4d9-->
         <h1>
-            ANDREAD ODBJERG
+            Velvet Voltage
         </h1>
-        <p>Andreas Odbjerg er en dansk sanger, sangskriver og musikproducer, kendt for sin popmusik med personlige tekster <br>og fængende melodier.
-            Han har haft stor succes med hits som "I morgen er der også en dag" og "Stor mand". <br>
-            Odbjerg, der oprindeligt kommer fra Odense,har haft en stærk tilknytning til den danske musikscene <br>
-            og har optrådt på flere prominente spillesteder. <br>
-            I Aarhus har Andreas Odbjerg blandt andet spillet på Radar, et ikonisk og intimt spillested kendt <br>
-            for at fremme både etablerede og upcoming kunstnere. Her har han med sine energifyldte liveoptrædener skabt en <br>
-            tæt forbindelse til publikum og cementeret sin status som en af Danmarks mest talentfulde musikere.</p>
+        <p>Velvet Voltage er et dansk synth-rock band, der blander mørke, hypnotiske beats med en elektrisk energi,
+            der trækker tråde fra både 80’ernes new wave og nutidens elektroniske eksperimenter.
+            Bandet blev dannet i Aarhus i 2021, da forsanger og keyboardspiller Freja Storm mødte guitarist Magnus Lind på en
+            lokal jam-session. Med en fælles kærlighed til vintage synthesizere og dybtfølte tekster begyndte de at
+            skabe musik, der balancerer mellem det intime og det eksplosive.
+            Gruppens debut-EP Neon Dreams blev hurtigt en darling blandt undergrundsscenen og gav dem en voksende fanskare.
+            Velvet Voltage er kendt for deres intense liveshows, hvor de kombinerer musik og visuelle effekter for at skabe
+            en helhedsoplevelse, der fanger publikum fra første tone.
         </div>
     </div>
+
+    <div class="koncert2">
+        <img src="images/sceneband.png" alt="sceneband" class="sceneband">
+        <div class="tekst2">
+        <!--ChatGPT: "Opdigt er fake band, og giv bandet et godt navn. Skriv en kort beskrivende tekst om bandet og deres oprindelse. Bandnavnen skal indeholde ordet red" https://chatgpt.com/share/67581f62-de58-8009-b01b-b3c745b55bab-->
+            <h1>
+                Red aurora
+            </h1>
+            <p>Red Aurora er en eksplosiv indie-pop-rockgruppe, der kombinerer intense følelser med farverige lydlandskaber. 
+                Bandet blev dannet i 2021 i København og fik hurtigt opmærksomhed for deres dynamiske sceneshows og 
+                fængende melodier. Navnet Red Aurora symboliserer gruppens ønske om at bringe lys og energi 
+                ind i mørket – som en rød morgenhimmel, der varsler en ny begyndelse. 
+                Med tekster, der kredser om kærlighed, håb og indre kampe, har Red Aurora skabt en lyd,
+                der både er rå og sårbar. Bandet har allerede spillet på flere større festivaler og arbejdet på deres debutalbum,
+                som de lover vil være en følelsesmæssig rutsjebanetur.
+        </div>
+    </div>
+
+    <div class="koncert3">
+        <img src="images/tremandband.png" alt="tremandband" class="tremandband">
+        <div class="tekst3">
+        <!--ChatGPT: "Opdigt er fake band, og giv bandet et godt navn. Skriv en kort beskrivende tekst om bandet og deres oprindelse. Bandnavnen skal indeholde ordet red" https://chatgpt.com/share/67581f62-de58-8009-b01b-b3c745b55bab-->
+            <h1>
+                Whispering Tree
+            </h1>
+            <p>Whispering Tree er et indie-rock band, der har været en fast del af musikscenen i Aarhus siden deres dannelse i 2022. 
+                Bandet, der består af fire passionerede musikere, har gennem årene spillet på Radar adskillige gange og opbygget 
+                en loyal fanbase blandt byens musikelskere. Deres unikke blanding af drømmende melodier og følelsesladede 
+                tekster, der ofte trækker på naturens mystik, har gjort dem til et af de mest elskede live-bands i Aarhus. 
+                Med deres karakteristiske lyd og energiske optrædener har Whispering Tree formået at skabe en intim og fængslende 
+                atmosfære hver gang de har optrådt på Radar, hvilket har givet dem en solid plads i hjertet af byens musikalske 
+                fællesskab. Deres debutalbum, Roots of Echoes, har fået stor opmærksomhed, og de ser frem til at fortsætte med 
+                at fortrylle publikum med deres musik, både på Radar og på nye scenarier.
+        </div>
+    </div>
+
+        <!--ChatGPT: "Kan du lave en kort beskrivelse af andreas odbjerg, og hans oprindelse i Aarhus hvor han har spillet på Radar?" https://chatgpt.com/share/67581b52-bf74-8009-b932-cb7871d05cf2-->
+
     </main>
 
     <footer>
