--- a/arrangementer.html
+++ b/arrangementer.html
@@ -101,7 +101,54 @@
         </div>
     </div>
 
-        <!--ChatGPT: "Kan du lave en kort beskrivelse af andreas odbjerg, og hans oprindelse i Aarhus hvor han har spillet på Radar?" https://chatgpt.com/share/67581b52-bf74-8009-b932-cb7871d05cf2-->
+    <div class="koncert4">
+        <img src="images/andreasodbjerg.png" alt="andreas odbjerg" class="andreasodbjerg_billede">
+        <div class="tekst4">
+   <!--ChatGPT: "Kan du lave en kort beskrivelse af andreas odbjerg, og hans oprindelse i Aarhus hvor han har spillet på Radar?" https://chatgpt.com/share/67581b52-bf74-8009-b932-cb7871d05cf2-->
+            <h1>
+                Andreas Odbjerg
+            </h1>
+            <p>Andreas Odbjerg er en dansk sanger, sangskriver og musikproducer, kendt for sin popmusik med personlige tekster 
+                og fængende melodier. Han har haft stor succes med hits som "I morgen er der også en dag" og "Stor mand". Odbjerg, 
+                der oprindeligt kommer fra Odense, har haft en stærk tilknytning til den danske musikscene og har optrådt på 
+                flere prominente spillesteder.
+                I Aarhus har Andreas Odbjerg blandt andet spillet på Radar, et ikonisk og intimt spillested kendt for at 
+                fremme både etablerede og upcoming kunstnere. Her har han med sine energifyldte liveoptrædener skabt en tæt 
+                forbindelse til publikum og cementeret sin status som en af Danmarks mest talentfulde musikere.
+        </div>
+    </div>
+
+    <div class="koncert5">
+        <img src="images/blaamand.png" alt="blaamand" class="blaamand_billede">
+        <div class="tekst5">
+   <!--ChatGPT: "Skriv en kort beskrivende tekst om bandet "blue men"og deres oprindelse." https://chatgpt.com/share/67581b52-bf74-8009-b932-cb7871d05cf2-->
+            <h1>
+                Blue men
+            </h1>
+            <p>Blue Men Group er et eksperimentelt band og performancegruppe, der blev grundlagt i 
+                1987 i New York City af tre kunstnere: Matt Goldman, Phil Stanton og Chris Wink. 
+                Gruppen er kendt for deres unikke blanding af musik, teater, komedie og visuelle 
+                effekter. De optræder ofte med blå malede ansigter og minimalistiske kostumer og bruger 
+                usædvanlige instrumenter og teknologi i deres shows. Blue Man Group begyndte som et 
+                teaterprojekt og har siden udviklet sig til en globalt anerkendt performanceoplevelse, 
+                der kombinerer musik og visuel kunst på en nyskabende måde.
+        </div>
+    </div>
+    
+    <div class="koncert6">
+        <img src="images/blaest.png" alt="blaest" class="blaest_billede">
+        <div class="tekst6">
+   <!--ChatGPT: "Skriv en kort beskrivelse af bandetet blæst" https://chatgpt.com/share/67582ab4-91b8-8009-b2ab-a2bf4c9bd2a1-->
+            <h1>
+                Blæst
+            </h1>
+            <p>Blæst er et dansk band, der spiller en blanding af folk, rock og popmusik. 
+                Bandet blev dannet i 2013 og er kendt for deres karakteristiske lydbillede, der kombinerer akustiske 
+                instrumenter med elektroniske elementer. Deres tekster rummer ofte reflekterende og følelsesmæssige 
+                temaer, og de har opnået anerkendelse for deres innovative tilgang til genrerne. Blæst har udgivet 
+                flere album og har været et fast indslag på den danske musikscene.
+        </div>
+    </div>
 
     </main>
 
