--- a/anmeldelser.html
+++ b/anmeldelser.html
@@ -26,7 +26,7 @@
                     <li><a href="kontaktinformation.html">Kontaktinformationer</a></li>
                     <li><a href="#">Anmeldelser</a>
                     <ul>
-                        <li><a href="#">Historier og oplevelser fra kunstere</a></li>
+                        <li><a href="anmeldelser.html">Historier og oplevelser fra kunstere</a></li>
                     </li>
                     </ul>
                     <li><a href="#">Om Radar</a>
@@ -49,9 +49,11 @@
 
 <main>
     <section class="section1">
-        <img src="images/billede1.png" alt="billede1">
-        <h1>Blæst</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat adipisci distinctio, mollitia officiis laudantium quaerat id odit iste maxime fugit eaque tenetur tempore atque voluptatibus quidem, praesentium rerum incidunt quam.</p>
+        <img src="images/billede1.png" alt="billede" class="billede1">
+        <div class="tekst1">
+            <h1>Blæst</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat adipisci distinctio, mollitia officiis laudantium quaerat id odit iste maxime fugit eaque tenetur tempore atque voluptatibus quidem, praesentium rerum incidunt quam.</p>
+        </div>
     </section>
 </main>
 
