--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="kontaktinformation.html">Kontaktinformationer</a></li>
                 <li><a href="#">Anmeldelser</a>
                 <ul>
-                    <li><a href="#">Historier og oplevelser fra kunstere</a></li>
+                    <li><a href="anmeldelser.html">Historier og oplevelser fra kunstere</a></li>
                 </li>
                 </ul>
                 <li><a href="#">Om Radar</a>
