--- a/kontaktinformation.html
+++ b/kontaktinformation.html
@@ -52,14 +52,14 @@
     <h1>Kontaktinformation</h1>
 
     <div class="box">
-        <div>
-            <h2>BOOKING: booking.(@).radarlive.dk <br>
-            GENEREL BOOKING: kontakt.(@).radarlive.dk <br>
-            TELEFON: +45 86 76 03 44 <br>
-            ADRESSE: Karen Wegners Gade 6 <br>
-            </h2>
+        <div class="info">
+            <h2>BOOKING: booking.(@).radarlive.dk</h2>
+            <h2>GENEREL BOOKING: kontakt.(@).radarlive.dk</h2>
+            <h2>TELEFON: +45 86 76 03 44</h2>
+            <h2>ADRESSE: Karen Wegners Gade 6</h2>
         </div>
         <div class="billeder_container">
+<!--Link direkte til radars placering-->
             <img src="images/kort.png" alt="kort" class="kort">
             <img src="images/tekst.png" alt="tekst" class="tekst">
         </div>
