--- a/anmeldelser.html
+++ b/anmeldelser.html
@@ -51,8 +51,48 @@
     <section class="section1">
         <img src="images/billede1.png" alt="billede" class="billede1">
         <div class="tekst1">
-            <h1>Blæst</h1>
+            <h1>Whispering tree</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat adipisci distinctio, mollitia officiis laudantium quaerat id odit iste maxime fugit eaque tenetur tempore atque voluptatibus quidem, praesentium rerum incidunt quam.</p>
+        </div>
+    </section>
+
+    <section class="section2">
+        <img src="images/billede2.png" alt="billede" class="billede2">
+        <div class="tekst2">
+            <h1>Red aurora</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam pariatur iusto aliquid nostrum nesciunt iure accusantium. Magnam voluptatem praesentium nisi cupiditate quibusdam veritatis dignissimos asperiores, distinctio atque dolor doloribus.</p>
+        </div>
+    </section>
+
+    <section class="section3">
+        <img src="images/billede3.png" alt="billede" class="billede3">
+        <div class="tekst3">
+            <h1>velvet voltage</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam pariatur iusto aliquid nostrum nesciunt iure accusantium. Magnam voluptatem praesentium nisi cupiditate quibusdam veritatis dignissimos asperiores, distinctio atque dolor doloribus.</p>
+        </div>
+    </section>
+
+    <section class="section4">
+        <img src="images/billede4.png" alt="billede" class="billede4">
+        <div class="tekst4">
+            <h1>Andreas Odbjerg</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam pariatur iusto aliquid nostrum nesciunt iure accusantium. Magnam voluptatem praesentium nisi cupiditate quibusdam veritatis dignissimos asperiores, distinctio atque dolor doloribus.</p>
+        </div>
+    </section>
+
+    <section class="section5">
+        <img src="images/billede5.png" alt="billede" class="billede5">
+        <div class="tekst5">
+            <h1>Blæst</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam pariatur iusto aliquid nostrum nesciunt iure accusantium. Magnam voluptatem praesentium nisi cupiditate quibusdam veritatis dignissimos asperiores, distinctio atque dolor doloribus.</p>
+        </div>
+    </section>
+
+    <section class="section6">
+        <img src="images/billede6.png" alt="billede" class="billede6">
+        <div class="tekst6">
+            <h1>Blue men</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil veniam pariatur iusto aliquid nostrum nesciunt iure accusantium. Magnam voluptatem praesentium nisi cupiditate quibusdam veritatis dignissimos asperiores, distinctio atque dolor doloribus.</p>
         </div>
     </section>
 </main>
