--- a/arrangementer.html
+++ b/arrangementer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,7 +32,7 @@
                         <ul>
                             <li><a href="#">Åbningstider</a></li>
                             <li><a href="#">Frivilligt arbejde</a></li>
-                            <li><a href="#">Radars historie</a></li>
+                            <li><a href="historie.html">Radars historie</a></li>
                         </ul>
                     </li>
                     <li><a href="arrangementer.html">Arrangementer</a>
