--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <ul>
                         <li><a href="#">Åbningstider</a></li>
                         <li><a href="#">Frivilligt arbejde</a></li>
-                        <li><a href="#">Radars historie</a></li>
+                        <li><a href="historie.html">Radars historie</a></li>
                     </ul>
                 </li>
                 <li><a href="arrangementer.html">Arrangementer</a>
@@ -53,6 +53,7 @@
 
 <footer>
     <div class="some">
+        
         <i class="fa-brands fa-spotify"></i>
         <i class="fa-brands fa-facebook"></i>
         <i class="fa-brands fa-instagram"></i>
