--- a/anmeldelser.html
+++ b/anmeldelser.html
@@ -33,7 +33,7 @@
                         <ul>
                             <li><a href="#">Åbningstider</a></li>
                             <li><a href="#">Frivilligt arbejde</a></li>
-                            <li><a href="#">Radars historie</a></li>
+                            <li><a href="historie.html">Radars historie</a></li>
                         </ul>
                     </li>
                     <li><a href="arrangementer.html">Arrangementer</a>
