--- a/historie.html
+++ b/historie.html
@@ -46,7 +46,56 @@
             </nav>
         </div>
     </header>
+    <main>
+        <section class="container">
+            <img src="images/synge_mand.png" alt="synge mand" class="synge_mand">
+            <article class="artikel1">
+                <p class="afsnit1">
+                Leder du efter et sted, hvor musikken og stemningen forenes i en unik oplevelse? 
+                Så skal du besøge Radar! Beliggende i hjertet af Aarhus er Radar et spillested, der tilbyder 
+                intime koncerter og kunstneriske oplevelser, som skiller sig ud fra mængden.
+                </p>
 
+                <p class="afsnit2">
+                Radar er ikke bare et spillested – det er et samlingspunkt for musikelskere, 
+                kunstnere og kulturinteresserede. Stedet fokuserer på at præsentere ny, eksperimenterende 
+                og ofte lokalt forankret musik. Deres program er varieret og spænder fra indie og elektronisk
+                til jazz og verdensmusik. Uanset hvad du foretrækker, kan du forvente høj kvalitet og en nærværende atmosfære.
+                Radar har en særlig evne til at skabe rammer, hvor publikum og kunstnere 
+                kan mødes i øjenhøjde. Med en kapacitet på omkring 300 personer føles koncerterne intime 
+                og autentiske, hvilket gør oplevelsen endnu mere magisk.
+                </p>
+
+                <p class="afsnit3">
+                Men Radar er mere end musikken. Spillestedet har stærke værdier, som gennemsyrer alt, hvad de gør. 
+                De værdsætter mangfoldighed og innovation og har en mission om at støtte nye talenter og kunstneriske 
+                projekter. Radar er en platform for både etablerede navne og upcoming artister, og de er stolte af 
+                at kunne bidrage til det kreative miljø i Aarhus.
+                Radar prioriterer bæredygtighed, ligestilling og inklusion. De arbejder aktivt for at skabe en 
+                åben og tryg atmosfære for alle – både foran og bag scenen. Det gør Radar til mere end blot et 
+                sted at høre musik. Det er et sted, hvor du føler dig velkommen og inspireret.
+                </p>
+
+                <p class="afsnit4">
+                Er du klar til at opleve Aarhus' mest intime musikscene? Tag et kig på Radars kommende 
+                program og find en koncert, der tiltaler dig. Følg dem på sociale medier for nyheder, 
+                eller tag direkte forbi på Godsbanen, hvor Radar holder til. Oplev magien selv – du vil ikke fortryde det!
+                </p>
+            </article>
+            <img src="images/mand_med_trumpet.png" alt="mand med trumpet" class="mand_med_trumpet">
+        </section>
+
+    </main>
+    
+    <footer>
+        <div class="some">
+            
+            <i class="fa-brands fa-spotify"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-youtube"></i>
+        </div>
+    </footer>
 
 </body>
 </html>
