--- a/historie.html
+++ b/historie.html
@@ -48,41 +48,67 @@
     </header>
     <main>
         <section class="container">
-            <img src="images/synge_mand.png" alt="synge mand" class="synge_mand">
-            <article class="artikel1">
-                <p class="afsnit1">
-                Leder du efter et sted, hvor musikken og stemningen forenes i en unik oplevelse? 
-                Så skal du besøge Radar! Beliggende i hjertet af Aarhus er Radar et spillested, der tilbyder 
-                intime koncerter og kunstneriske oplevelser, som skiller sig ud fra mængden.
+            <h1>Radars historie</h1>
+            <section class="container_1">
+                <img src="images/synge_mand.png" alt="synge mand" class="synge_mand">
+        
+        <article class="artikel_1">
+            <div class="artikel1">
+                <p>
+                    Hvis du leder efter „hvad skal man se i Aarhus”, er Radar ved Godsbanen et must. 
+                    Dette intime spillested er en skjult perle, hvor musikken lever og dansk kultur 
+                    blomstrer. Her bliver hver koncert en unik oplevelse, der forbinder byens 
+                    historie med dens moderne musikscene.
                 </p>
+            </div>
 
-                <p class="afsnit2">
-                Radar er ikke bare et spillested – det er et samlingspunkt for musikelskere, 
-                kunstnere og kulturinteresserede. Stedet fokuserer på at præsentere ny, eksperimenterende 
-                og ofte lokalt forankret musik. Deres program er varieret og spænder fra indie og elektronisk
-                til jazz og verdensmusik. Uanset hvad du foretrækker, kan du forvente høj kvalitet og en nærværende atmosfære.
-                Radar har en særlig evne til at skabe rammer, hvor publikum og kunstnere 
-                kan mødes i øjenhøjde. Med en kapacitet på omkring 300 personer føles koncerterne intime 
-                og autentiske, hvilket gør oplevelsen endnu mere magisk.
+            <div class="artikel2">
+                <p>
+                    Radar er kendt for sin evne til at præsentere alt fra spirende talenter til etablerede navne inden for mange genrer. 
+                    Uanset om du er til jazz, rock eller eksperimenterende elektronisk musik, finder du oplevelser i Aarhus, der 
+                    skiller sig ud her. Atmosfæren er nærværende og autentisk, og scenen giver plads til kreativitet og nye 
+                    fortællinger. Publikum og kunstnere beskriver ofte Radar som et sted, hvor man virkelig kan mærke musikkens sjæl. 
+                    Spillestedets beliggenhed ved Godsbanen, et kulturelt mekka i Aarhus, gør oplevelsen endnu mere unik.
+                    Musikprogrammet på Radar skiller sig ud ved at være mangfoldigt og nyskabende. Her kan du opleve alt 
+                    fra intime akustiske aftener til energiske og vilde optrædener, der efterlader publikum med minder for livet. 
+                    Spillestedets engagement i lokale og internationale kunstnere sikrer, at der altid er noget nyt og 
+                    spændende på plakaten.
                 </p>
+            </div>
+            </section>
 
-                <p class="afsnit3">
-                Men Radar er mere end musikken. Spillestedet har stærke værdier, som gennemsyrer alt, hvad de gør. 
-                De værdsætter mangfoldighed og innovation og har en mission om at støtte nye talenter og kunstneriske 
-                projekter. Radar er en platform for både etablerede navne og upcoming artister, og de er stolte af 
-                at kunne bidrage til det kreative miljø i Aarhus.
-                Radar prioriterer bæredygtighed, ligestilling og inklusion. De arbejder aktivt for at skabe en 
-                åben og tryg atmosfære for alle – både foran og bag scenen. Det gør Radar til mere end blot et 
-                sted at høre musik. Det er et sted, hvor du føler dig velkommen og inspireret.
-                </p>
+            <section class="container_2">
+            <div class="container_3">
+                <div class="artikel3">
+                    <p>
+                        Men hvorfor er musik vigtigt? Fordi den samler mennesker og skaber fællesskab. På Radar mærker 
+                        du netop dette. Publikum er engageret, og musikerne er tæt på – både fysisk og emotionelt. 
+                        Spillestedet er ikke bare en platform for koncerter; det er et centrum for dansk kultur og en 
+                        hyldest til musikkens evne til at berige vores liv. Musikken på Radar skaber en samhørighed, 
+                        hvor grænserne mellem kunstner og publikum opløses. Her kan du lade dig opsluge af tonerne og 
+                        få en pause fra hverdagens travlhed. Radar er stedet, hvor minder skabes, og hvor musikalske 
+                        åbenbaringer kan opstå.
 
-                <p class="afsnit4">
-                Er du klar til at opleve Aarhus' mest intime musikscene? Tag et kig på Radars kommende 
-                program og find en koncert, der tiltaler dig. Følg dem på sociale medier for nyheder, 
-                eller tag direkte forbi på Godsbanen, hvor Radar holder til. Oplev magien selv – du vil ikke fortryde det!
-                </p>
+                        Det handler ikke kun om koncerterne, men også om selve stedet. Radars intime rammer og dedikerede 
+                        personale gør oplevelsen til noget ganske særligt. Her får du en helt anden nærværende stemning 
+                        end på de store koncertarenaer.
+                    </p>
+                </div>
+
+                <div class="artikel4">
+                    <p>
+                        Så næste gang du planlægger din tur til Aarhus, sørg for at tjekke Radars program. Det er en unik mulighed
+                         for at opleve livemusik i verdensklasse og opdage, hvorfor dette sted er en vigtig del af byens puls. 
+                         Radar er svaret, når du leder efter de bedste oplevelser i Aarhus. Uanset om du er lokal eller 
+                         turist, vil en aften på Radar give dig en smag af, hvad der gør Aarhus så speciel. Book dine billetter 
+                         i dag, og bliv en del af byens musikalske eventyr!
+                    </p>
+                </div>
+            </div>
+                <img src="images/mand_med_trumpet.png" alt="mand med trumpet" class="mand_med_trumpet">
+
+            </section>
             </article>
-            <img src="images/mand_med_trumpet.png" alt="mand med trumpet" class="mand_med_trumpet">
         </section>
 
     </main>
